--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -6,10 +6,13 @@ on:
   pull_request:
     branches:
       - master
+  schedule:
+    # Every hour on the hour.
+    - cron:  '*/60 * * * *'
 jobs:
   buildSite:
     env:
-      GOPATH: ${{ github.workspace }}
+      GOPATH: ${{ github.workspace }}/go
     name: Install deps and build site
     runs-on: ubuntu-18.04
     steps:
@@ -22,7 +25,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.13.x
+          go-version: 1.16.x
 
       - uses: peaceiris/actions-hugo@v2
         with:
