--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   all:
     env:
-      GOPATH: ${{ github.workspace }}
+      GOPATH: ${{ github.workspace }}/go
     name: Check links
     runs-on: ubuntu-18.04
     steps:
