--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
   "name": "docs",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "lint-markdown": "node ./scripts/markdown_seo_lint.js",
     "lint-links": "node ./scripts/link_linter.js"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.0.6",
     "@octokit/rest": "^18.0.6",
     "@sentry/cli": "^1.55.1",
     "@slack/web-api": "^5.12.0",
-    "autoprefixer": "^9.6.0",
     "broken-link-checker": "^0.7.8",
-    "chokidar-cli": "^2.1.0",
-    "clipboard-polyfill": "^2.8.1",
-    "concurrently": "^5.2.0",
-    "cssnano": "^4.1.10",
+    "concurrently": "^6.0.0",
     "cypress": "^4.11.0",
     "http-server": "^0.12.1",
     "js-yaml": "^3.13.1",
     "markdownlint": "^0.17.2",
-    "node-sass": "^4.14.1",
-    "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.0.4",
-    "typedoc": "^0.15.3",
-    "typescript": "^3.9.6"
+    "typedoc": "^0.15.3"
   }
 }
